--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
-    rlang, gWQS, pbapply, ggplot2, mvtnorm, viridis, extraDistr, cowplot, methods
+    rlang, gWQS, pbapply, ggplot2, mvtnorm, viridis, extraDistr, cowplot, methods, MASS, car, future, future.apply, pscl, reshape2, nnet
 Suggests: 
     rmarkdown, knitr, testthat (>= 3.0.0)
 VignetteBuilder: knitr
