Import availableWorkers() from 'parallelly' instead of 'future'. The re-export of the latter will be removed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(car,vif)
 importFrom(future.apply,future_lapply)
 importFrom(grid,is.grob)
 importFrom(nnet,multinom)
+importFrom(parallelly,availableWorkers)
 importFrom(pscl,zeroinfl)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
