Explicitly import the only function used in 'future', i.e. plan()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(wqs_sim)
 export(wqspt_plot)
 import(cowplot)
 import(extraDistr)
-import(future)
 import(gWQS)
 import(ggplot2)
 import(methods)
@@ -17,6 +16,7 @@ import(stats)
 import(viridis)
 importFrom(MASS,glm.nb)
 importFrom(car,vif)
+importFrom(future,plan)
 importFrom(future.apply,future_lapply)
 importFrom(grid,is.grob)
 importFrom(nnet,multinom)
